syntax = "proto3";

package user;




service PostService{
    rpc CreatePost(Post) returns (Post);
    rpc UpdatePost(Post) returns (Post);
    rpc GetPostById(WithId) returns(Post);
    rpc GetAllPosts(Empty) returns (Posts);
    rpc DeletePostById(WithId) returns (Post);
    rpc GetAllUserPosts(WithId) returns (Posts);
    rpc DeleteAllUserPosts(WithId) returns (Posts);
    rpc StarPosts(Empty) returns (Posts);
    rpc GetPostsByPrice(PriceSep) returns (Posts); 

    rpc GetPostByCategory(CatID) returns (Posts);
    rpc GetAllCategories(Empty) returns(Categories);
    rpc CreateCategory(CategoryReq) returns (Category);
    rpc DeleteCategory(CatID) returns (Category);
    rpc GetCategory(CatID) returns (Category);
}
message CategoryReq{
    string post_id=1;
    string name=2;
}
message Category{
    string id =1;
    string post_id=2;
    string name=3;
    string created_at =4;
    string updated_at =5;
    string deleted_at=6;
}
message Categories{
    repeated Category Categories=1;
}
message CatID{
    string id=1;
}


message PriceSep{
    bool high=1;
}

message WithId{
    string id =1;
}

message Empty{

}

message Post{
    string id =1;
    string title =2;
    string description = 3;
    string body=4;
    string author_id =5;
    string stars=6;
    string rating = 7;
    string price = 8;
    string product_type=9;
    repeated string size =10;
    string created_at=11;
    string updated_at=12;
    string deleted_at=13;

}

message Posts{
    repeated Post Posts=1;
}
